# Lyngvi

./: CMakeLists.txt  LICENSE  README.md  domain.cpp  domain.h  engine.cpp  engine.h  logger.cpp  logger.h  lyngvi.cpp  lyngvi.h  module_loader.cpp  module_loader.h
test/: CMakeLists.txt  get_text_tests.cpp  load_module_tests.cpp  main.cpp
